2008-11-05  Dan Fandrich <dan@coneharvesters.com>

	* aolserver/*: moved to contrib/aolserver/
	* README: updated
	* po/de.po: Updated German translation by Marcus Meissner

2008-10-20  Jan Patera <patera@users.sourceforge.net>

	* libexif/pentax/mnote-pentax-tag.c & olympus/mnote-olympus-tag.c:
	  Don't crash in mnote_XX_tag_get_description on unknown tags

2008-10-04  Jan Patera <patera@users.sourceforge.net>

	* libexif/canon/mnote-canon-entry.c: fixed interpretation
	  of Auto ISO and Self-Timer entries

2008-10-08  Aric Blumer <aricblumer@users.sourceforge.net>

	* libexif/exif-tag.c: GPS tags EXIF_TAG_GPS_IMG_DIRECTION_REF
	  and EXIF_TAG_GPS_IMG_DIRECTION are now recognized

2008-10-04  Jan Patera <patera@users.sourceforge.net>

	* libexif/olympus/exif-mnote-data-olympus.c: bug #2071600,
	  gnome Bug #549029: Original v1 Nikon makernotes
	  are always parsed using MM order, regardless of
	  main EXIF data word order.

2008-10-04  Louis Strous <louis_strous@users.sourceforge.net>

	* libexif/exif-loader.c: DHT & DQT markers are now properly
	  skipped when searching for APP1 marker in JPEG stream.
	  Apparently such files are created by Gisteq PhotoTrackr SW
	  used to add GPS tags.

2008-10-02  Niek Bergboer <niek@google.com>

	* libexif/exif-data.c libexif/canon/exif-mnote-data-canon.c
	  libexif/fuji/exif-mnote-data-fuji.c
	  libexif/olympus/exif-mnote-data-olympus.c
	  libexif/pentax/exif-mnote-data-pentax.c:
	  Replaced unsigned int by size_t in some places
	  Added some checks on sizes, makernotes shouldn't
	  be larger than 64kb.

2008-09-04  Dan Fandrich <dan@coneharvesters.com>

	* po/nl.po: Updated Dutch translation by Erwin Poeze

2008-07-25  Marcus Meissner  <marcus@jet.franken.de>

	* libexif/exif-content.c: Handle realloc to 0 case
	  correctly. Fixes EOG and GIMP crashes.

2008-06-26  Jan Patera <patera@users.sourceforge.net>

	* libexif/olympus/exif-mnote-data-olympus.c: better support for