@@ -1,0 +1,5 @@
+# The c++ and aolserver contrib directories are out of date and are
+# are pointless to distribute in the offical source release.
+
+EXTRA_DIST = watcom/Makefile watcom/_stdint.h
+
